--- a/install
+++ b/install
@@ -3,9 +3,17 @@
 
 echo "...checking dependencies"
 if ! diff -b -B -q front-monitor/package.json app/package.json > /dev/null ; then
-  echo "downloading new dependencies"
-  cp app/package.json front-monitor/
-  npm install 
+	echo "downloading new dependencies"
+  	cp app/package.json front-monitor/
+  	npm install 
+fi
+
+if ! diff -b -B -q ../app.bak/collector/collector-version collector/collector-version > /dev/null ; then
+	echo "Update version of front-monitor-collector.js"
+    version=$(cat collector/collector-version)
+	for server in `ssh -i /home/despegar/.ssh/hf-static-00 hf-static-00 "cat /etc/cluster.info" | sed "s/{/\n/g" | grep "\-0" | cut -d '"' -f 4`; do
+		scp -i /home/despegar/.ssh/$server -rq /home/despegar/app/collector  $server:/home/despegar/apache/www/public/front-monitor-versioned/$version
+	done
 fi
 
 cp -R front-monitor/node_modules app/
