--- a/install
+++ b/install
@@ -4,7 +4,9 @@ echo "...checking dependencies"
 if ! diff -b -B -q front-monitor/package.json app/package.json > /dev/null ; then
 	echo "downloading new dependencies"
   	cp app/package.json front-monitor/
-  	sudo npm install 
+  	cd front-monitor
+  	npm install 
+  	cd ..
 fi
 
 if ! diff -b -B -q /home/despegar/app.bak/collector/collector-version /home/despegar/app/collector/collector-version > /dev/null ; then
