--- a/install
+++ b/install
@@ -12,8 +12,8 @@ fi
 if ! diff -b -B -q /home/despegar/app.bak/collector/collector-version /home/despegar/app/collector/collector-version > /dev/null ; then
 	echo "Update version of front-monitor-collector.js"
     version=`cat /home/despegar/app/collector/collector-version`
-	for server in `ssh -i /home/despegar/.ssh/hf-static-01 hf-static-01 "cat /etc/cluster.info" | sed "s/{/\n/g" | grep "\-0" | cut -d '"' -f 4`; do
-		scp -i /home/despegar/.ssh/$server -rq /home/despegar/app/collector $server:/home/despegar/apache/www/public/front-monitor/js-versioned/$version
+	for server in `ssh -o "StrictHostKeyChecking no" -i /home/despegar/.ssh/hf-static-01 hf-static-01 "cat /etc/cluster.info" | sed "s/{/\n/g" | grep "\-0" | cut -d '"' -f 4`; do
+		scp -o "StrictHostKeyChecking no" -i /home/despegar/.ssh/$server -rq /home/despegar/app/collector $server:/home/despegar/apache/www/public/front-monitor/js-versioned/$version
 	done
 fi
 
